--- a/public/css/main.css
+++ b/public/css/main.css
@@ -270,71 +270,73 @@ button:focus {
 
 /* line 165, ../../scss/main.scss */
 .row {
-  overflow: hidden;
-  *zoom: 1;
   width: 100%;
 }
 
-/* line 170, ../../scss/main.scss */
+/* line 169, ../../scss/main.scss */
 .purple {
   color: #7118b2;
 }
 
-/* line 172, ../../scss/main.scss */
+/* line 171, ../../scss/main.scss */
 .grey-background {
   background: #edf1f2;
   color: #000;
 }
 
-/* line 177, ../../scss/main.scss */
+/* line 176, ../../scss/main.scss */
 .light-gray-background {
   background: #eff3f6;
   color: #000;
 }
 
-/* line 182, ../../scss/main.scss */
+/* line 181, ../../scss/main.scss */
 .dark-background {
   background: #000;
   color: #fff;
 }
 
-/* line 187, ../../scss/main.scss */
+/* line 186, ../../scss/main.scss */
 .purple-background {
   background: #7118b2;
   color: #fff;
 }
-/* line 191, ../../scss/main.scss */
+/* line 190, ../../scss/main.scss */
 .purple-background a {
   color: #fff;
 }
-/* line 192, ../../scss/main.scss */
+/* line 191, ../../scss/main.scss */
 .purple-background a:hover {
   color: #000;
 }
 
-/* line 195, ../../scss/main.scss */
+/* line 194, ../../scss/main.scss */
 .container {
   max-width: 980px;
   margin: 0 auto;
 }
 
-/* line 200, ../../scss/main.scss */
+/* line 199, ../../scss/main.scss */
 .header-padding {
   padding: 28px;
 }
 
-/* line 204, ../../scss/main.scss */
+/* line 203, ../../scss/main.scss */
 .hero-padding {
   padding: 120px 28px 135px;
 }
 
-/* line 208, ../../scss/main.scss */
+/* line 207, ../../scss/main.scss */
 .base-section-padding {
   text-align: center;
   padding: 110px 0 135px;
 }
+/* line 211, ../../scss/main.scss */
+.base-section-padding.telegraphic {
+  padding-bottom: 80px;
+}
 
-/* line 213, ../../scss/main.scss */
+/* line 216, ../../scss/main.scss */
 .logo {
   text-indent: -9999px;
   background-image: url("/img/wesual.png");
@@ -345,19 +347,18 @@ button:focus {
 }
 
 /****************************************
-* Intro anim
+* Intro animations
 ****************************************/
-/* line 233, ../../scss/main.scss */
+/* line 235, ../../scss/main.scss */
 .js .hero-header-first,
 .js .hero-header-second,
 .js .hero-container p,
 .js .hero-container .sign-up,
-.js .hero-tv,
-.js section .container {
+.js .hero-tv {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
 }
-/* line 236, ../../scss/main.scss */
+/* line 238, ../../scss/main.scss */
 .js .hero-header-first,
 .js .hero-header-second {
   -webkit-transform: translate3d(0, 7.5px, 0);
@@ -366,26 +367,28 @@ button:focus {
   -o-transform: translate3d(0, 7.5px, 0);
   transform: translate3d(0, 7.5px, 0);
 }
-/* line 238, ../../scss/main.scss */
+/* line 240, ../../scss/main.scss */
 .js .hero-tv {
-  -webkit-transform: translate3d(15px, 0, 0);
-  -moz-transform: translate3d(15px, 0, 0);
-  -ms-transform: translate3d(15px, 0, 0);
-  -o-transform: translate3d(15px, 0, 0);
-  transform: translate3d(15px, 0, 0);
-}
-/* line 241, ../../scss/main.scss */
-.js section .container {
-  -webkit-transition: opacity 400ms ease;
-  -moz-transition: opacity 400ms ease;
-  -o-transition: opacity 400ms ease;
-  transition: opacity 400ms ease;
-  -webkit-transition-delay: 50ms;
-  -moz-transition-delay: 50ms;
-  -o-transition-delay: 50ms;
-  transition-delay: 50ms;
+  -webkit-transform: translate3d(30px, 0, 0) scale(0.95) rotateY(-10deg);
+  -moz-transform: translate3d(30px, 0, 0) scale(0.95) rotateY(-10deg);
+  -ms-transform: translate3d(30px, 0, 0) scale(0.95) rotateY(-10deg);
+  -o-transform: translate3d(30px, 0, 0) scale(0.95) rotateY(-10deg);
+  transform: translate3d(30px, 0, 0) scale(0.95) rotateY(-10deg);
+  -webkit-transform-origin: 100% 50%;
+  -moz-transform-origin: 100% 50%;
+  -ms-transform-origin: 100% 50%;
+  -o-transform-origin: 100% 50%;
+  transform-origin: 100% 50%;
 }
 /* line 246, ../../scss/main.scss */
+.js .hero {
+  -webkit-perspective: 1100;
+  -moz-perspective: 1100;
+  -ms-perspective: 1100;
+  -o-perspective: 1100;
+  perspective: 1100;
+}
+/* line 248, ../../scss/main.scss */
 .js .hero-header-first {
   -webkit-transition: all 700ms ease;
   -moz-transition: all 700ms ease;
@@ -396,7 +399,7 @@ button:focus {
   -o-transition-delay: 300ms;
   transition-delay: 300ms;
 }
-/* line 251, ../../scss/main.scss */
+/* line 253, ../../scss/main.scss */
 .js .hero-header-second {
   -webkit-transition: all 700ms ease;
   -moz-transition: all 700ms ease;
@@ -407,40 +410,39 @@ button:focus {
   -o-transition-delay: 600ms;
   transition-delay: 600ms;
 }
-/* line 257, ../../scss/main.scss */
+/* line 259, ../../scss/main.scss */
 .js .hero-container p,
 .js .hero-container .sign-up {
   -webkit-transition: opacity 1000ms ease;
   -moz-transition: opacity 1000ms ease;
   -o-transition: opacity 1000ms ease;
   transition: opacity 1000ms ease;
-  -webkit-transition-delay: 900ms;
-  -moz-transition-delay: 900ms;
-  -o-transition-delay: 900ms;
-  transition-delay: 900ms;
+  -webkit-transition-delay: 1000ms;
+  -moz-transition-delay: 1000ms;
+  -o-transition-delay: 1000ms;
+  transition-delay: 1000ms;
 }
-/* line 262, ../../scss/main.scss */
+/* line 264, ../../scss/main.scss */
 .js .hero-tv {
-  -webkit-transition: all 1000ms ease;
-  -moz-transition: all 1000ms ease;
-  -o-transition: all 1000ms ease;
-  transition: all 1000ms ease;
-  -webkit-transition-delay: 900ms;
-  -moz-transition-delay: 900ms;
-  -o-transition-delay: 900ms;
-  transition-delay: 900ms;
+  -webkit-transition: all 1200ms ease;
+  -moz-transition: all 1200ms ease;
+  -o-transition: all 1200ms ease;
+  transition: all 1200ms ease;
+  -webkit-transition-delay: 1000ms;
+  -moz-transition-delay: 1000ms;
+  -o-transition-delay: 1000ms;
+  transition-delay: 1000ms;
 }
-/* line 274, ../../scss/main.scss */
+/* line 275, ../../scss/main.scss */
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .hero-header-first,
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .hero-header-second,
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .hero-container p,
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .hero-container .sign-up,
-.js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .hero-tv,
-.js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active section .container {
+.js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .hero-tv {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
 }
-/* line 277, ../../scss/main.scss */
+/* line 278, ../../scss/main.scss */
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .hero-header-first,
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .hero-header-second {
   -webkit-transform: translate3d(0, 0, 0);
@@ -449,8 +451,77 @@ button:focus {
   -o-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
 }
-/* line 279, ../../scss/main.scss */
+/* line 280, ../../scss/main.scss */
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .hero-tv {
+  -webkit-transform: translate3d(0, 0, 0) scale(1) rotateY(0deg);
+  -moz-transform: translate3d(0, 0, 0) scale(1) rotateY(0deg);
+  -ms-transform: translate3d(0, 0, 0) scale(1) rotateY(0deg);
+  -o-transform: translate3d(0, 0, 0) scale(1) rotateY(0deg);
+  transform: translate3d(0, 0, 0) scale(1) rotateY(0deg);
+}
+/* line 286, ../../scss/main.scss */
+.js .features h2,
+.js .features .feature {
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+  opacity: 0;
+}
+/* line 289, ../../scss/main.scss */
+.js .features h2,
+.js .features .feature {
+  -webkit-transform: translate3d(0, 15px, 0);
+  -moz-transform: translate3d(0, 15px, 0);
+  -ms-transform: translate3d(0, 15px, 0);
+  -o-transform: translate3d(0, 15px, 0);
+  transform: translate3d(0, 15px, 0);
+}
+/* line 292, ../../scss/main.scss */
+.js .features h2 {
+  -webkit-transition: all 750ms ease;
+  -moz-transition: all 750ms ease;
+  -o-transition: all 750ms ease;
+  transition: all 750ms ease;
+  -webkit-transition-delay: 100ms;
+  -moz-transition-delay: 100ms;
+  -o-transition-delay: 100ms;
+  transition-delay: 100ms;
+}
+/* line 297, ../../scss/main.scss */
+.js .features .feature {
+  -webkit-transition: all 750ms ease;
+  -moz-transition: all 750ms ease;
+  -o-transition: all 750ms ease;
+  transition: all 750ms ease;
+}
+/* line 299, ../../scss/main.scss */
+.js .features .feature-first {
+  -webkit-transition-delay: 400ms;
+  -moz-transition-delay: 400ms;
+  -o-transition-delay: 400ms;
+  transition-delay: 400ms;
+}
+/* line 301, ../../scss/main.scss */
+.js .features .feature-second {
+  -webkit-transition-delay: 700ms;
+  -moz-transition-delay: 700ms;
+  -o-transition-delay: 700ms;
+  transition-delay: 700ms;
+}
+/* line 303, ../../scss/main.scss */
+.js .features .feature-third {
+  -webkit-transition-delay: 1000ms;
+  -moz-transition-delay: 1000ms;
+  -o-transition-delay: 1000ms;
+  transition-delay: 1000ms;
+}
+/* line 310, ../../scss/main.scss */
+.js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .features.active h2,
+.js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .features.active .feature {
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+  opacity: 1;
+}
+/* line 313, ../../scss/main.scss */
+.js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .features.active h2,
+.js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .features.active .feature {
   -webkit-transform: translate3d(0, 0, 0);
   -moz-transform: translate3d(0, 0, 0);
   -ms-transform: translate3d(0, 0, 0);
@@ -461,22 +532,22 @@ button:focus {
 /****************************************
 * Index
 ****************************************/
-/* line 288, ../../scss/main.scss */
+/* line 321, ../../scss/main.scss */
 .menu-header {
   overflow: visible;
 }
 
-/* line 293, ../../scss/main.scss */
+/* line 326, ../../scss/main.scss */
 .menu li {
   display: inline-block;
   margin: 5px 0 0 15px;
 }
-/* line 297, ../../scss/main.scss */
+/* line 330, ../../scss/main.scss */
 .menu li a {
   position: relative;
   color: #7118b2;
 }
-/* line 302, ../../scss/main.scss */
+/* line 335, ../../scss/main.scss */
 .menu li a:after {
   -webkit-transition: all 200ms ease;
   -moz-transition: all 200ms ease;
@@ -497,11 +568,11 @@ button:focus {
   background: #7118b2;
   content: '';
 }
-/* line 315, ../../scss/main.scss */
+/* line 348, ../../scss/main.scss */
 .menu li a:hover {
   color: #7118b2;
 }
-/* line 318, ../../scss/main.scss */
+/* line 351, ../../scss/main.scss */
 .menu li a:hover:after {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=25);
   opacity: 0.25;
@@ -512,21 +583,21 @@ button:focus {
   transform: translate3d(0, 2px, 0);
 }
 
-/* line 326, ../../scss/main.scss */
+/* line 359, ../../scss/main.scss */
 .relative {
   position: relative;
 }
 
-/* line 330, ../../scss/main.scss */
+/* line 363, ../../scss/main.scss */
 .hero-container {
   width: 650px;
 }
-/* line 333, ../../scss/main.scss */
+/* line 366, ../../scss/main.scss */
 .hero-container p {
   max-width: 570px;
 }
 
-/* line 338, ../../scss/main.scss */
+/* line 371, ../../scss/main.scss */
 .hero-tv {
   position: absolute;
   left: 690px;
@@ -534,18 +605,35 @@ button:focus {
   width: 676px;
 }
 
-/* line 345, ../../scss/main.scss */
+/* line 378, ../../scss/main.scss */
 .macbook {
-  margin-top: 50px;
+  position: relative;
   width: 828px;
+  margin: 50px auto 0;
+}
+/* line 383, ../../scss/main.scss */
+.macbook .macbook-viewport {
+  z-index: 2;
+  position: absolute;
+  width: 75.8%;
+  height: 72.8%;
+  top: 14.5%;
+  left: 12.1%;
+  overflow: hidden;
+}
+/* line 393, ../../scss/main.scss */
+.macbook img {
+  z-index: 1;
+  position: relative;
+  width: 100%;
 }
 
-/* line 350, ../../scss/main.scss */
+/* line 400, ../../scss/main.scss */
 .features {
   text-align: center;
 }
 
-/* line 354, ../../scss/main.scss */
+/* line 404, ../../scss/main.scss */
 .feature {
   display: inline-block;
   text-align: center;
@@ -553,22 +641,22 @@ button:focus {
   min-width: 300px;
   margin-top: 70px;
 }
-/* line 361, ../../scss/main.scss */
+/* line 411, ../../scss/main.scss */
 .feature strong {
   margin-bottom: 10px;
 }
-/* line 363, ../../scss/main.scss */
+/* line 413, ../../scss/main.scss */
 .feature i {
   font-size: 90px;
   margin-bottom: 65px;
 }
-/* line 368, ../../scss/main.scss */
+/* line 418, ../../scss/main.scss */
 .feature p {
   margin: 0 auto;
   max-width: 275px;
 }
 
-/* line 374, ../../scss/main.scss */
+/* line 424, ../../scss/main.scss */
 .feature-bubble {
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -580,17 +668,17 @@ button:focus {
   margin: 0 auto 30px;
 }
 
-/* line 381, ../../scss/main.scss */
+/* line 431, ../../scss/main.scss */
 .telegraphic h2 {
   margin-bottom: 50px;
 }
 
-/* line 383, ../../scss/main.scss */
+/* line 433, ../../scss/main.scss */
 .slider {
   width: 100%;
 }
 
-/* line 387, ../../scss/main.scss */
+/* line 437, ../../scss/main.scss */
 .slider-viewport {
   -webkit-perspective: 1500;
   -moz-perspective: 1500;
@@ -600,7 +688,7 @@ button:focus {
   position: relative;
   height: 100%;
 }
-/* line 392, ../../scss/main.scss */
+/* line 442, ../../scss/main.scss */
 .slider-viewport li {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
@@ -619,17 +707,17 @@ button:focus {
   top: 0;
   left: 0;
 }
-/* line 401, ../../scss/main.scss */
+/* line 451, ../../scss/main.scss */
 .slider-viewport li img {
   display: block;
   width: 100%;
 }
-/* line 406, ../../scss/main.scss */
+/* line 456, ../../scss/main.scss */
 .slider-viewport li.is-next {
-  -webkit-transition: all 1050ms ease;
-  -moz-transition: all 1050ms ease;
-  -o-transition: all 1050ms ease;
-  transition: all 1050ms ease;
+  -webkit-transition: all 1000ms ease;
+  -moz-transition: all 1000ms ease;
+  -o-transition: all 1000ms ease;
+  transition: all 1000ms ease;
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
   -webkit-transform: translate3d(0, 0, 0) rotateX(0deg) scale(1);
@@ -637,12 +725,12 @@ button:focus {
   -ms-transform: translate3d(0, 0, 0) rotateX(0deg) scale(1);
   -o-transform: translate3d(0, 0, 0) rotateX(0deg) scale(1);
   transform: translate3d(0, 0, 0) rotateX(0deg) scale(1);
-  -webkit-transition-delay: 250ms;
-  -moz-transition-delay: 250ms;
-  -o-transition-delay: 250ms;
-  transition-delay: 250ms;
+  -webkit-transition-delay: 275ms;
+  -moz-transition-delay: 275ms;
+  -o-transition-delay: 275ms;
+  transition-delay: 275ms;
 }
-/* line 413, ../../scss/main.scss */
+/* line 463, ../../scss/main.scss */
 .slider-viewport li.active {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
@@ -655,12 +743,12 @@ button:focus {
   position: relative;
   float: left;
 }
-/* line 421, ../../scss/main.scss */
+/* line 471, ../../scss/main.scss */
 .slider-viewport li.remove {
-  -webkit-transition: all 500ms ease;
-  -moz-transition: all 500ms ease;
-  -o-transition: all 500ms ease;
-  transition: all 500ms ease;
+  -webkit-transition: all 600ms ease;
+  -moz-transition: all 600ms ease;
+  -o-transition: all 600ms ease;
+  transition: all 600ms ease;
   -webkit-transform: translate3d(0, 30px, 0);
   -moz-transform: translate3d(0, 30px, 0);
   -ms-transform: translate3d(0, 30px, 0);
@@ -670,87 +758,45 @@ button:focus {
   opacity: 0;
 }
 
-/* line 429, ../../scss/main.scss */
+/* line 479, ../../scss/main.scss */
 .slider-pagination {
   text-align: center;
   cursor: default;
 }
-/* line 433, ../../scss/main.scss */
+/* line 483, ../../scss/main.scss */
 .slider-pagination li {
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
   border-radius: 50%;
-  -webkit-transition: background 10ms linear;
-  -moz-transition: background 10ms linear;
-  -o-transition: background 10ms linear;
-  transition: background 10ms linear;
-  -webkit-transition-delay: 200ms;
-  -moz-transition-delay: 200ms;
-  -o-transition-delay: 200ms;
-  transition-delay: 200ms;
+  -webkit-transition: all 300ms ease;
+  -moz-transition: all 300ms ease;
+  -o-transition: all 300ms ease;
+  transition: all 300ms ease;
   position: relative;
   display: inline-block;
   width: 15px;
   height: 15px;
-  margin: 20px 5px 0 0;
+  margin: 30px 6px 0 0;
   border: 1px solid #fff;
   cursor: pointer;
   overflow: hidden;
 }
-/* line 446, ../../scss/main.scss */
-.slider-pagination li:after {
-  -webkit-transition: all 150ms ease;
-  -moz-transition: all 150ms ease;
-  -o-transition: all 150ms ease;
-  transition: all 150ms ease;
-  -webkit-transform: translate3d(0, 5px, 0) scale(0);
-  -moz-transform: translate3d(0, 5px, 0) scale(0);
-  -ms-transform: translate3d(0, 5px, 0) scale(0);
-  -o-transform: translate3d(0, 5px, 0) scale(0);
-  transform: translate3d(0, 5px, 0) scale(0);
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  -ms-border-radius: 50%;
-  -o-border-radius: 50%;
-  border-radius: 50%;
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
-  opacity: 0;
-  content: '';
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+/* line 495, ../../scss/main.scss */
+.slider-pagination li.active {
+  -webkit-transform: scale(1.2);
+  -moz-transform: scale(1.2);
+  -ms-transform: scale(1.2);
+  -o-transform: scale(1.2);
+  transform: scale(1.2);
   background: #fff;
-}
-/* line 461, ../../scss/main.scss */
-.slider-pagination li:hover:after {
-  -webkit-transform: translate3d(0, 0, 0) scale(0.5);
-  -moz-transform: translate3d(0, 0, 0) scale(0.5);
-  -ms-transform: translate3d(0, 0, 0) scale(0.5);
-  -o-transform: translate3d(0, 0, 0) scale(0.5);
-  transform: translate3d(0, 0, 0) scale(0.5);
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
-  opacity: 1;
-}
-/* line 467, ../../scss/main.scss */
-.slider-pagination li.active:after {
-  -webkit-transform: scale(1.1);
-  -moz-transform: scale(1.1);
-  -ms-transform: scale(1.1);
-  -o-transform: scale(1.1);
-  transform: scale(1.1);
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
-  opacity: 1;
 }
 
 /****************************************
 * Misc.
 ****************************************/
-/* line 479, ../../scss/main.scss */
+/* line 506, ../../scss/main.scss */
 #mfPreviewBar, #mfPreviewBarShow {
   display: none !important;
 }
